kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pendeploy-handal
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # HTTP ke HTTPS redirect
    traefik.ingress.kubernetes.io/redirect-scheme: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    # Menggunakan cert-manager untuk SSL
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - api.millab-kubernetes.isacitra.com
    secretName: pendeploy-tls
  rules:
  - host: api.millab-kubernetes.isacitra.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pendeploy-handal
            port:
              number: 8080
